--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -38,8 +38,20 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #fff url('../img/settings.svg') no-repeat center / 15px;
+  background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
+  
+  &:hover .profile__settings-icon {
+    transform: translateX(-50%) translateY(-50%) rotate(180deg);
+  }
+}
+
+.profile__settings-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transition: 0.2s;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .profile__name {
