--- a/dating/sass/blocks/nav.scss
+++ b/dating/sass/blocks/nav.scss
@@ -4,6 +4,42 @@
   justify-content: space-between;
 }
 
+.nav__buttons {
+  // display: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 90px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  
+  li {
+    width: 33.33%
+  }
+}
+
+.nav__button {
+  width: 100%;
+  padding: 30px 0;
+  font-size: 0;
+  border: none;
+  background: #fff;
+  
+  &--active {
+    background: #8b94d5;
+    
+    .nav__button-icon {
+      fill: #fff;
+    }
+  }
+}
+
+.nav__button-icon {
+  fill: #8b94d5;
+}
+
 .nav__logo {
   display: flex;
   align-items: center;
@@ -146,6 +182,13 @@
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
+  .nav {
+    
+    &--inner {
+      display: none;
+    }
+  }
+  
   .nav__logo {
     
     &--footer {
