--- a/dating/sass/blocks/main.scss
+++ b/dating/sass/blocks/main.scss
@@ -11,3 +11,14 @@
   color: #474349;
   font-weight: 700;
 }
+
+@media screen and ($tablet-widths) {
+
+}
+
+@media screen and ($mobile-widths) {
+  .main__title {
+    margin: 0 0 30px 0;
+    text-align: center;
+  }
+}
