--- a/dating/css/style.css
+++ b/dating/css/style.css
@@ -167,7 +167,7 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
-  height: 90px;
+  height: 70px;
   margin: 0;
   padding: 0;
   list-style: none; }
@@ -176,10 +176,12 @@ body {
 
 .nav__button {
   width: 100%;
-  padding: 30px 0;
+  padding: 20px 0;
   font-size: 0;
   border: none;
-  background: #fff; }
+  background: #fff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s; }
   .nav__button--active {
     background: #8b94d5; }
     .nav__button--active .nav__button-icon {
@@ -1662,7 +1664,7 @@ body {
     align-items: center; }
   .profile__list--mobile {
     position: absolute;
-    width: 60%;
+    width: 70%;
     padding: 0;
     border-top: 1px solid #e6eef3;
     border-right: 1px solid #e6eef3;
