--- a/dating/sass/blocks/nav.scss
+++ b/dating/sass/blocks/nav.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 90px;
+  height: 70px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -22,10 +22,11 @@
 
 .nav__button {
   width: 100%;
-  padding: 30px 0;
+  padding: 20px 0;
   font-size: 0;
   border: none;
   background: #fff;
+  transition: 0.5s;
   
   &--active {
     background: #8b94d5;
