--- a/dating/sass/blocks/girl.scss
+++ b/dating/sass/blocks/girl.scss
@@ -14,6 +14,48 @@
   text-align: center;
 }
 
+.girl__select {
+  display: flex;
+  margin: 0 0 20px 0;
+  border-top: 1px solid #e6eef3;
+  border-bottom: 1px solid #e6eef3;
+}
+
+.girl__choice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  padding: 30px 0;
+  color: #c3c4d0;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: inherit;
+  border: none;
+  background: transparent;
+  box-sizing: border-box;
+  transition: 0.2s;
+  
+  &:first-child {
+    border-right: 1px solid #e6eef3;
+  }
+  
+  &--active {
+    color: #8b94d5;
+    border-bottom: 2px solid #8b94d5;
+    background: #f4f9fc;
+    
+    .girl__choice-icon {
+      fill: #8b94d5;
+    }
+  }
+}
+
+.girl__choice-icon {
+  fill: #c3c4d0;
+  margin: 0 5px 0 0;
+}
+
 .girl__flex {
   display: flex;
   justify-content: center;
@@ -244,7 +286,7 @@
     
     &--inner {
       width: 100%;
-      padding: 0 15px;
+      padding: 0;
     }
   }
   
@@ -263,7 +305,7 @@
     display: flex;
     justify-content: space-between;
     width: auto;
-    margin: 0 0 20px 0;
+    margin: 0 15px 20px 15px;
     
     &:last-child {
       margin: 0;
