--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -123,8 +123,12 @@
     }
   }
   
+  &--full {
+    width: 100%;
+  }
+  
   &--inactive {
-    left: -500px;
+    left: -1000px;
   }
   
   &--active {
@@ -383,6 +387,61 @@
   color: #b6b7c6;
   font-size: 14px;
   font-weight: 400;
+}
+
+.profile__tabs {
+  display: flex;
+  padding: 0 !important;
+}
+
+.profile__tab {
+  width: 33.33%;
+  padding: 30px 0;
+  color: #8f9a9c;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  background: transparent;
+  outline: none;
+  
+  &--active {
+    color: #59555b;
+    border-bottom: 2px solid #8b94d5;
+  }
+}
+
+.profile__balance {
+  height: 800px;
+}
+
+.profile__balance-content {
+  margin: auto;
+  text-align: center;
+}
+
+.profile__balance-text {
+  margin: 0 0 60px 0;
+  color: #c3c4d0;
+  font-size: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.profile__balance-counter {
+  display: block;
+  margin: 0 0 40px 0;
+  color: #424242;
+  font-size: 30px;
+  font-weight: 700;
+  
+  span {
+    font-size: 120px;
+  }
+}
+
+.profile__balance-button {
+  margin: auto;
 }
 
 @media screen and ($tablet-widths) {
