--- a/dating/sass/blocks/girl.scss
+++ b/dating/sass/blocks/girl.scss
@@ -15,7 +15,7 @@
 }
 
 .girl__select {
-  display: flex;
+  display: none;
   margin: 0 0 20px 0;
   border-top: 1px solid #e6eef3;
   border-bottom: 1px solid #e6eef3;
@@ -76,6 +76,7 @@
   
   &--inner {
     width: 250px;
+    background: #fff;
   }
 }
 
@@ -308,7 +309,7 @@
     margin: 0 15px 20px 15px;
     
     &:last-child {
-      margin: 0;
+      margin: 0 15px;
     }
   }
   
@@ -351,7 +352,8 @@
     display: none;
   }
   
-  .girl__links {
+  .girl__links,
+  .girl__select {
     display: flex;
   }
 }
