--- a/dating/css/style.css
+++ b/dating/css/style.css
@@ -1970,9 +1970,9 @@ body {
 
 .profile__tab {
   width: 33.33%;
-  padding: 30px 0;
+  padding: 20px 0;
   color: #8f9a9c;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
   border: none;
@@ -2011,11 +2011,14 @@ body {
 .profile__balance-button {
   margin: auto; }
 
-.profile__prices {
+.profile__prices,
+.profile__bonus,
+.profile__history {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  padding: 0 15px !important;
   background: #fff !important; }
 
 .profile__table--price {
@@ -2026,9 +2029,9 @@ body {
   overflow-x: scroll; }
 
 .profile__table-th {
-  padding: 30px 20px;
+  padding: 20px 15px 20px 15px;
   color: #59555b;
-  font-size: 20px;
+  font-size: 16px;
   background: #e6eef3; }
   .profile__table-th:first-child {
     border-top-left-radius: 8px; }
@@ -2045,7 +2048,7 @@ body {
 .profile__table-td {
   padding: 20px;
   color: #8f9a9c;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400; }
 
 .profile__table-alert {
