--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -401,9 +401,9 @@
 
 .profile__tab {
   width: 33.33%;
-  padding: 30px 0;
+  padding: 20px 0;
   color: #8f9a9c;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
   border: none;
@@ -451,8 +451,11 @@
   margin: auto;
 }
 
-.profile__prices {
+.profile__prices,
+.profile__bonus,
+.profile__history {
   flex-direction: column;
+  padding: 0 15px !important;
   background: #fff !important;
 }
 
@@ -465,9 +468,9 @@
 }
 
 .profile__table-th {
-  padding: 30px 20px;
+  padding: 20px 15px 20px 15px;
   color: #59555b;
-  font-size: 20px;
+  font-size: 16px;
   background: #e6eef3;
   
   &:first-child {
@@ -494,7 +497,7 @@
 .profile__table-td {
   padding: 20px;
   color: #8f9a9c;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400;
 }
 
