--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -515,9 +515,19 @@
   left: 50%;
   width: 80%;
   padding: 80px 40px; 
-  border: 1px solid red;
   background: #fff;
   transform: translateX(-50%) translateY(-50%);
+  transition: z-index 0.1s, opacity 0.7s ease-in;
+  
+  &--inactive {
+    opacity: 0;
+    z-index: -1;
+  }
+  
+  &--active {
+    opacity: 1;
+    z-index: 8;
+  }
 }
 
 .profile__popup-close {
@@ -526,6 +536,7 @@
   right: 20px; 
   width: 20px;
   height: 20px;
+  padding: 0;
   font-size: 0;
   border: none;
   background: transparent;
@@ -541,6 +552,7 @@
   color: #59555b;
   font-size: 20px;
   font-weight: 400;
+  text-align: center;
   
   &:last-of-type {
     margin: 10px 0 20px 0;
@@ -590,71 +602,80 @@
 
 .profile__popup-button {
   margin: 0 auto 20px auto;
+  font-size: 20px;
+  font-weight: 700;
 }
 
-/* New */
-.checkbox__label {
-  display: block;
+.profile__popup-label {
   position: relative;
-  padding-left: 35px;
-  color: #adadad;
-  margin: 10px 0;
+  display: block;
+  color: #8f9a9c;
+  font-size: 16px;
+  font-weight: 400;
   cursor: pointer;
-  font-size: 12px;
-  font-weight: 100;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   text-align: center;
 }
 
-.checkbox__label input {
+.profile__popup-checkbox {
   position: absolute;
+  top: 20px;
   opacity: 0;
   cursor: pointer;
 }
 
-.checkbox__checkmark {
-  position: absolute;
-  top: 1px;
-  left: 40%;
-  height: 14px;
-  width: 14px;
+.profile__popup-checkmark {
+  position: relative;
+  display: inline-block;
+  top: 20px;
+  left: -10px;
+  width: 30px;
+  height: 30px;
+  // margin: 0 10px 0 0;
+  border: 2px solid #cfd0d2;
+  border-radius: 6px;
   background: transparent;
-  border: 1px solid #adadad;
   transition: 0.2s;
 }
 
-/* .checkbox__label:hover input ~ .checkbox__checkmark {
-  background: #ccc;
-} */
+.profile__popup-label:hover .profile__popup-checkbox ~ .profile__popup-checkmark {
+  // background: #ccc;
+} 
 
-.checkbox__label input:checked ~ .checkbox__checkmark {
-  /* background: #ccc; */
+.profile__popup-label .profile__popup-checkbox:checked ~ .profile__popup-checkmark {
+  // background: #ccc; 
 }
 
-.checkbox__checkmark:after {
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
+}
+
+.profile__popup-checkmark:after {
   content: "";
   position: absolute;
   display: none;
-  transition: 0.2s;
+  animation: fadeOut 1s ease-out;
 }
 
-.checkbox__label input:checked ~ .checkbox__checkmark:after {
+.profile__popup-label .profile__popup-checkbox:checked ~ .profile__popup-checkmark:after {
   display: block;
+  animation: fadeIn 0.2s ease-in;
 }
 
-.checkbox__label .checkbox__checkmark:after {
+.profile__popup-label .profile__popup-checkmark:after {
   left: 9px;
-  top: 0px;
-  left: 4px;
-  width: 5px;
-  height: 10px;
-  border: 1px solid #adadad;
-  border-width: 0 1px 1px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
+  top: 3px;
+  left: 11px;
+  width: 7px;
+  height: 15px;
+  border: 1px solid #ff8116;
+  border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
 
